--- a/Analysis Code/EyeLink/README
+++ b/Analysis Code/EyeLink/README
@@ -3,3 +3,6 @@ EyeLink Analysis Stages
 (1) Run the Glare_Illusion_EyeLink_Subject_Analysis_v5.m script. This will preprocess the EyeLink data and segment the EyeLink data into epochs
 (2) Run the Glare_Illusion_EyeLink_Group_Analysis_v2.m script. 
 (3) Run Glare_Illusion_Machine_Learning_Subject_Level . m script. 
+
+Helper Functions
+EyeLink preprocessing (e.g., pupil blink removal): stublink.m and Stublinks60.m
