--- a/Analysis Code/EyeLink/README
+++ b/Analysis Code/EyeLink/README
@@ -1,8 +1,9 @@
 Analysis steps:
 
-(1) Run the Glare_Illusion_EyeLink_Subject_Analysis_v5.m script. This will preprocess the EyeLink data and segment the EyeLink data into epochs
-(2) Run the Glare_Illusion_EyeLink_Group_Analysis_v2.m script. 
-(3) Run Glare_Illusion_Machine_Learning_Subject_Level . m script. 
+(1) Run the EyeLink_Subject_Analysis_v5.m script. This will preprocess the EyeLink data and segment the EyeLink data into epochs
+(2) Run the EyeLink_Group_Analysis_v2.m script. Creates pupil, blink, and microsaccade timecourses in Figure 3, Figure 5, and Supplementary Figure 3.
+(3) Run Machine_Learning_Subject_Level_Layered.m script. Creates Figure 4 and Supplementary Figure 5. 
+(4) Run EyeLink_Plot_Subject_Eye_Timecourses.m script. Creates pupil, blink, and microsaccade timecourses in Figure 6 and Supplementary Figure 6.
 
 Helper Functions
 EyeLink preprocessing (e.g., pupil blink removal): stublink.m and Stublinks60.m
