--- a/Analysis Code/Behavior/README
+++ b/Analysis Code/Behavior/README
@@ -1,3 +1,4 @@
 Analysis steps:
 
-(1) Run .m 
+(1) Run Behavioral_Subject_Analysis.m. Outputs results for Figure 2, Figure 6B, C, D, E, and Supplementary Figure 2. 
+(2) Run HVF_Subject_Figures.m. Creates Supplementary Figure 1. 
