--- a/Analysis Code/MEG/README
+++ b/Analysis Code/MEG/README
@@ -1,6 +1,7 @@
 Analysis steps:
 
-(1) Run MEG_subject_level_data_analysis.m. Outputs results for Figure 6F and Supplementary Figure 7. (Note: only one patient participant [P4] completed an MEG study session)
+(1) Run MEG_subject_level_data_analysis.m. Outputs results for Figure 6F and Supplementary Figure 7. Relevant data is in the Patients/P4/Original_Task/MEG_Session stored on OSF 
 
 Helper functions
 Permutation_Analysis.zip houses the scripts/functions that are used by MEG_subject_level_data_analysis.m
+Fieldtrip toolbox is required (https://www.fieldtriptoolbox.org).
