--- a/Analysis Code/EyeLink/README
+++ b/Analysis Code/EyeLink/README
@@ -1,5 +1,7 @@
 Analysis steps:
 
+Note: Update "root_dir" variable to correspond with your data path.
+
 (1) Run the EyeLink_Subject_Analysis_v5.m script. This will preprocess the EyeLink data and segment the EyeLink data into epochs. Outputs from this script are used in the group, machine learning, and the subject eye timecourse scripts.
 (2) Run the EyeLink_Group_Analysis_v2.m script. Creates pupil, blink, and microsaccade timecourses in Figure 3, Figure 5, and Supplementary Figure 3.
 (3) Run Machine_Learning_Subject_Level_Layered.m script. Creates Figure 4 and Supplementary Figure 5. 
