--- a/Paradigm/README
+++ b/Paradigm/README
@@ -1,6 +1,6 @@
 Instructions for running the paradigm
 
-When initating the paradigm in Psychopy, a start-up screen will appear:
+When initating the paradigm in Psychopy (Psychopy versions v2022.2.4 and v2021.1.2 were used in Kronemer et al., Communications Biology, 2025), a start-up screen will appear:
 
 "Skip Positioning Phase" (default = "n" or no)
 The positioning phase allows the experimenter to adjust the position of stimuli in the sighted and blind field of cerebrally blind patients. If the Positioning Phase is skipped, the values inputed in "Final X position" and "Final Y position" will be used. When completing the positioning phase, participants should remain fixated on the central fixation image and verbally indicate their perception for on-screen stimuli. 
@@ -12,9 +12,11 @@ The main task phase uses the stimulus position set during the positioning phase 
 See Kronemer et al., Communications Biology, 2025 methods section for full details on the task design and parameters.
 
 "Button Condition" (default = 1)
-The button condition indicates which button is coded with which keypress. Button condition 1 = "When you see a red plug sign (+) - Press 1" and "When you see a red cross (x) image - Press 2". Button condition 2 = "When you see a red plug sign (+) - Press 2" and "When you see a red cross (x) image - Press 1".
+The button condition indicates which button is coded with which keypress. Button condition 1 = "When you see a red plus sign (+) - Press 1" and "When you see a red cross (x) image - Press 2". Button condition 2 = "When you see a red plus sign (+) - Press 2" and "When you see a red cross (x) image - Press 1".
 
 "EyeLink" (default = "n" or no)
+Indicates whether EyeLink will be recorded. If set to "y" or yes and EyeLink is not connected or properly configured with the computer running Psychopy, the task will crash or fail to initialize.
+
 "EyeLink EDF" (default = "test.edf") 
 EyeLink allows for a maximum of 8 characters before ".edf" 
 
